# oxyd

./: Cargo.toml  README.md  justfile  old.README.md
.github/workflows/: ci.yml
src/oxyd-bin/: Cargo.toml
src/oxyd-bin/src/: main.rs
src/oxyd-cli/: Cargo.toml
src/oxyd-collectors/: Cargo.toml
src/oxyd-collectors/src/: cpu.rs  disk.rs  lib.rs  memory.rs  network.rs  process.rs  unified.rs
src/oxyd-core/: Cargo.toml
src/oxyd-core/src/: engine.rs
src/oxyd-domain/: Cargo.toml
src/oxyd-domain/src/: lib.rs
src/oxyd-domain/src/models/: config.rs  errors.rs  metrics.rs  mod.rs  plugin.rs  process.rs  system.rs
src/oxyd-domain/src/traits/: collectors.rs  mod.rs
src/oxyd-process-manager/: Cargo.toml
src/oxyd-process-manager/src/: lib.rs  linux.rs
src/oxyd-process-manager/src/linux/: cpu.rs  helpers.rs  manager.rs  mod.rs  parsers.rs
src/oxyd-tui/: Cargo.toml
src/oxyd-tui/src/: app.rs  event.rs  history.rs  lib.rs  notifications.rs  tabs.rs
src/oxyd-tui/src/ui/: cpu.rs  disk.rs  help.rs  memory.rs  mod.rs  network.rs  notifications.rs  overview.rs  processes.rs  settings.rs  widgets.rs
