[workspace]
members = [
    "src/oxyd-core",
    "src/oxyd-domain",
    "src/oxyd-collectors",
    "src/oxyd-process-manager",
    "src/oxyd-tui",
    "src/oxyd-cli",
    "src/oxyd-bin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["duolok"]
repository = "https://github.com/duolok/oxyd"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sysinfo = "0.32"
procfs = "0.17"
ratatui = "0.29"
chrono = { version = "0.4", features = ["serde"] }
