[package]
name = "oxyd-bin"
version = "0.1.0"       
edition = "2021"
authors = ["duolok"]
repository = "https://github.com/duolok/oxyd"

[dependencies]
oxyd-domain = { path = "../oxyd-domain" }  
oxyd-core = { path = "../oxyd-core" }  
oxyd-collectors = { path = "../oxyd-collectors" }  
tokio = { workspace = true }
