[package]
name = "oxyd-bin"
version = "0.1.0"       
edition = "2021"
authors = ["duolok"]
repository = "https://github.com/duolok/oxyd"

[dependencies]
oxyd-domain = { path = "../oxyd-domain" }  
oxyd-core = { path = "../oxyd-core" }  
oxyd-tui = { path = "../oxyd-tui" }  
oxyd-collectors = { path = "../oxyd-collectors" }  
tokio = { workspace = true }
ratatui.workspace = true
crossterm = "0.29.0"
